[fix] maximize image/pre content width in readability popup

--- a/server/static/style.css
+++ b/server/static/style.css
@@ -285,6 +285,12 @@ code, kbd {
             * {
                 margin: 1em 0;
             }
+            img, pre, code {
+                max-width: 100%;
+            }
+            pre {
+                text-wrap: wrap;
+            }
         }
     }
 }
